# funding-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  prd.md
.github/: codeql-config.yml
.github/workflows/: ci.yml  deploy.yml  pages.yml  security.yml
backend/: .env.example  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  server.ts
backend/src/ai/: ai.service.ts  cache.ts  index.ts  provider.interface.ts  router.ts  types.ts
backend/src/auth/: did.service.ts  index.ts  nostr.middleware.ts  nostr.service.ts
backend/src/config/: index.ts  (+3 more)
backend/tests/: setup.ts
database/migrations/: 001_initial_schema.sql  002_indexes.sql  003_user_identities.sql  004_align_schema_with_models.sql
database/seeds/: 001_test_data.sql
docs/: browser-audit.md  gap-analysis.md  qe-backend-report.md
docs/api/: openapi.yaml
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
infrastructure/nginx/: nginx.conf
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
k8s/base/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  serviceaccount.yaml
scripts/: backup.sh  migrate.sh  seed.sh  setup.sh
wasm-viz/: Cargo.toml  build.sh
wasm-viz/src/: lib.rs
wasm-viz/src/charts/: common.rs  mod.rs  network_graph.rs  progress_tracker.rs  score_distribution.rs  timeline.rs  variance_heatmap.rs
(+235 files in other folders)
